--- a/index.html
+++ b/index.html
@@ -3,10 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ohmyfood</title>
     <link rel="stylesheet" href="assets/styles.css">
+    <script src="https://kit.fontawesome.com/07fc3fdff4.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <div>
+        <div>
+            <header>
+                <i class="fa-solid fa-arrow-left"></i>
+                <img src="/assets/images/assets_logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+            </header>
+            <div>
+                <i class="fa-solid fa-location-dot"></i>
+                <p>Paris, Belleville</p>
+            </div>
+        </div>
+        <section>
+            <h2>Réservez le menu qui vous convient</h2>
+            <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+            <button type="submit"> Explorer nos restaurants</button>
+        </section>
+        <section>
+            <h2>Fonctionnement</h2>
+            <div>
+                <div>
+                    <p>1</p>
+                </div>
+                <div>
+                    <i class="fa-solid fa-mobile-screen-button"></i>
+                    <p>Choisissez un restaurant</p>
+                </div>
+            </div>
+        </section>
+        <main
+            <h2>Restaurants</h2>
+            <div>
+                <article>
+                    <div>
+                        <img src="/assets/images/assets_restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image du restaurant la palette du goût">
+                        <p>Nouveau</p>
+                    </div>
+                    <div>
+                        <div>
+                            <h3>La palette du goût</h3>
+                            <p>Ménilmontant</p>
+                        </div>
+                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                </article>
+            </div>
+        </main>
+        <footer>
+            <img src="/assets/images/assets_logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+            <div>
+                <div>
+                    <i class="fa-solid fa-utensils"></i>
+                    <p>Proposer un restaurant</p>
+                </div> 
+                <div>
+                    <i class="fa-solid fa-handshake-angle"></i>
+                    <p>Devenir partenaire</p>
+                </div> 
+                <p>Mentions légales</p>
+                <p>Contact</p>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
