reset et variables

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </section>
-        <main
+        <main>
             <h2>Restaurants</h2>
             <div>
                 <article>
