--- a/index.html
+++ b/index.html
@@ -8,51 +8,49 @@
     <script src="https://kit.fontawesome.com/07fc3fdff4.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div>
-        <div>
-            <header>
-                <i class="fa-solid fa-arrow-left"></i>
-                <img src="/assets/__images/assets_logo/ohmyfood@2x.svg" alt="logo ohmyfood">
-            </header>
+    <div class="main-container"> 
+        <header>
+            <i class="fa-solid fa-arrow-left"></i>
+            <img src="/assets/__images/assets_logo/ohmyfood@2x.svg" alt="logo ohmyfood">
             <div>
                 <i class="fa-solid fa-location-dot"></i>
                 <p>Paris, Belleville</p>
             </div>
-        </div>
-        <section>
-            <h2>Réservez le menu qui vous convient</h2>
-            <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-            <button type="submit"> Explorer nos restaurants</button>
-        </section>
-        <section>
-            <h2>Fonctionnement</h2>
-            <div>
-                <div>
-                    <p>1</p>
-                </div>
-                <div>
-                    <i class="fa-solid fa-mobile-screen-button"></i>
-                    <p>Choisissez un restaurant</p>
-                </div>
-            </div>
-        </section>
+        </header>
         <main>
-            <h2>Restaurants</h2>
-            <div>
-                <article>
+            <section>
+                <h1>Réservez le menu qui vous convient</h1>
+                <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+                <button type="submit"> Explorer nos restaurants</button>
+            </section>
+            <section>
+                <h2>Fonctionnement</h2>
+                <div>
                     <div>
-                        <img src="/assets/__images/assets_restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image du restaurant la palette du goût">
-                        <p>Nouveau</p>
+                        <p>1</p>
                     </div>
                     <div>
-                        <div>
-                            <h3>La palette du goût</h3>
-                            <p>Ménilmontant</p>
+                        <i class="fa-solid fa-mobile-screen-button"></i>
+                        <p>Choisissez un restaurant</p>
+                    </div>
+                </div>
+            </section>
+            <section class="restaurants">
+                <h2>Restaurants</h2>
+                <div class="restaurants__cards">
+                    <article class="card">
+                        <img src="/assets/__images/assets_restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image du restaurant la palette du goût" class="card__img">
+                        <p class="card__badge">Nouveau</p>
+                        <div class="card__content">
+                            <div class="card__txt">
+                                <h3 class="card__title">La palette du goût</h3>
+                                <p class="card__subtitle">Ménilmontant</p>
+                            </div>
+                            <i class="fa-regular fa-heart heart-btn"></i>
                         </div>
-                        <i class="fa-regular fa-heart"></i>
-                    </div>
-                </article>
-            </div>
+                    </article>
+                </div>
+            </section>
         </main>
         <footer>
             <img src="/assets/__images/assets_logo/ohmyfood@2x.svg" alt="logo ohmyfood">
