most components homepage

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 <body>
     <div class="main-container"> 
-        <header>
-            <i class="fa-solid fa-arrow-left"></i>
-            <img src="/assets/__images/assets_logo/ohmyfood@2x.svg" alt="logo ohmyfood">
-            <div>
+        <header class="header">
+            <!-- <i class="fa-solid fa-arrow-left none"></i> -->
+            <img src="/assets/__images/assets_logo/ohmyfood@2x.svg" alt="logo ohmyfood" class="header__logo">
+            <div class="header__localisation">
                 <i class="fa-solid fa-location-dot"></i>
                 <p>Paris, Belleville</p>
             </div>
         </header>
         <main>
-            <section>
-                <h1>Réservez le menu qui vous convient</h1>
-                <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-                <button type="submit"> Explorer nos restaurants</button>
+            <section class="hero">
+                <h1 class="section-title hero__title">Réservez le menu qui vous convient</h1>
+                <p class="section-subtitle hero__subtitle">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+                <button class="cta-btn" type="submit"> Explorer nos restaurants</button>
             </section>
             <section>
                 <h2>Fonctionnement</h2>
