--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
     <div class="main-container"> 
         <header class="header">
-            <!-- <i class="fa-solid fa-arrow-left none"></i> -->
-            <img src="/assets/__images/assets_logo/ohmyfood@2x.svg" alt="logo ohmyfood" class="header__logo">
+            <img src="./assets/__images/assets_logo/ohmyfood@2x.svg" alt="logo ohmyfood" class="header__logo">
             <div class="header__localisation">
                 <i class="fa-solid fa-location-dot"></i>
                 <p>Paris, Belleville</p>
@@ -23,49 +22,100 @@
                 <p class="section-subtitle hero__subtitle">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
                 <button class="cta-btn" type="submit"> Explorer nos restaurants</button>
             </section>
-            <section>
-                <h2>Fonctionnement</h2>
-                <div>
-                    <div>
-                        <p>1</p>
+            <section class="steps">
+                <h2 class="section-title">Fonctionnement</h2>
+                <div class="steps__tags card-wrapper">
+                    <div class="step-card">
+                        <div class="step-card__number">
+                            <p>1</p>
+                        </div>    
+                        <div class="step-card__content">
+                            <i class="fa-solid fa-mobile-screen-button step-card__icon"></i>
+                            <p class="step-card__txt">Choisissez un restaurant</p>
+                        </div>
                     </div>
-                    <div>
-                        <i class="fa-solid fa-mobile-screen-button"></i>
-                        <p>Choisissez un restaurant</p>
+                    <div class="step-card">
+                        <div class="step-card__number">
+                            <p>2</p>
+                        </div>    
+                        <div class="step-card__content">
+                            <i class="fa-solid fa-list step-card__icon"></i>
+                            <p class="step-card__txt">Composez votre menu</p>
+                        </div>
+                    </div>
+                    <div class="step-card">
+                        <div class="step-card__number">
+                            <p>3</p>
+                        </div>    
+                        <div class="step-card__content">
+                            <i class="fa-solid fa-store step-card__icon"></i>
+                            <p class="step-card__txt">Dégustez au restaurant</p>
+                        </div>
                     </div>
                 </div>
             </section>
             <section class="restaurants">
-                <h2>Restaurants</h2>
-                <div class="restaurants__cards">
-                    <article class="card">
-                        <img src="/assets/__images/assets_restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image du restaurant la palette du goût" class="card__img">
-                        <p class="card__badge">Nouveau</p>
-                        <div class="card__content">
-                            <div class="card__txt">
-                                <h3 class="card__title">La palette du goût</h3>
-                                <p class="card__subtitle">Ménilmontant</p>
+                <h2 class="section-title">Restaurants</h2>
+                <div class="restaurants__cards card-wrapper">
+                        <article class="restaurant-card"><a href="./pages/lapalettedugout.html">
+                            <img src="./assets/__images/assets_restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image du restaurant la palette du goût" class="restaurant-card__img">
+                            <p class="restaurant-card__badge">Nouveau</p>
+                            <div class="restaurant-card__content">
+                                <div class="restaurant-card__txt">
+                                    <h3 class="restaurant-card__title">La palette du goût</h3>
+                                    <p class="restaurant-card__subtitle">Ménilmontant</p>
+                                </div>
+                                <i class="fa-regular fa-heart heart-btn"></i>
+                            </div>
+                        </a></article>
+                    <article class="restaurant-card"><a href="">
+                        <img src="./assets/__images/assets_restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image du restaurant la palette du goût" class="restaurant-card__img">
+                        <p class="restaurant-card__badge">Nouveau</p>
+                        <div class="restaurant-card__content">
+                            <div class="restaurant-card__txt">
+                                <h3 class="restaurant-card__title">La note enchantée</h3>
+                                <p class="restaurant-card__subtitle">Charonne</p>
                             </div>
                             <i class="fa-regular fa-heart heart-btn"></i>
                         </div>
-                    </article>
+                    </a></article>
+                    <article class="restaurant-card"><a href="">
+                        <img src="./assets/__images/assets_restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image du restaurant la palette du goût" class="restaurant-card__img">
+                        <div class="restaurant-card__content">
+                            <div class="restaurant-card__txt">
+                                <h3 class="restaurant-card__title">À la française</h3>
+                                <p class="restaurant-card__subtitle">Cité rouge</p>
+                            </div>
+                            <i class="fa-regular fa-heart heart-btn"></i>
+                        </div>
+                    </a></article>
+                    <article class="restaurant-card"><a href="">
+                        <img src="./assets/__images/assets_restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image du restaurant la palette du goût" class="restaurant-card__img">
+                        <div class="restaurant-card__content">
+                            <div class="restaurant-card__txt">
+                                <h3 class="restaurant-card__title">Le délice des sens</h3>
+                                <p class="restaurant-card__subtitle">Folie-Méricourt</p>
+                            </div>
+                            <i class="fa-regular fa-heart heart-btn"></i>
+                        </div>
+                    </a></article>
                 </div>
             </section>
         </main>
-        <footer>
-            <img src="/assets/__images/assets_logo/ohmyfood@2x.svg" alt="logo ohmyfood">
-            <div>
-                <div>
-                    <i class="fa-solid fa-utensils"></i>
-                    <p>Proposer un restaurant</p>
-                </div> 
-                <div>
-                    <i class="fa-solid fa-handshake-angle"></i>
-                    <p>Devenir partenaire</p>
-                </div> 
-                <p>Mentions légales</p>
-                <p>Contact</p>
-            </div>
+        <footer class="footer">
+            <h2 class="footer__title">ohmyfood</h2>
+            <ul class="footer__list">
+                <li class="footer__link">
+                    <i class="fa-solid fa-utensils footer-icon"></i>
+                    <a href="/">Proposer un restaurant</a>
+                </li> 
+                <li class="footer__link">
+                    <i class="fa-solid fa-handshake-angle footer-icon"></i>
+                    <a href="/">Devenir partenaire</a>
+                </li> 
+                <li class="footer__link"><a href="/">Mentions légales</a></li>
+                <li class="footer__link"><a href="/">Contact</a></li>
+            </ul>
         </footer>
     </div>
 </body>
