animations added, missing loader, other menu pages and responsive

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/07fc3fdff4.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="main-container"> 
+    <div class="main-container hide-content"> 
         <header class="header">
             <img src="./assets/__images/assets_logo/ohmyfood@2x.svg" alt="logo ohmyfood" class="header__logo">
             <div class="header__localisation">
@@ -65,7 +65,10 @@
                                     <h3 class="restaurant-card__title">La palette du goût</h3>
                                     <p class="restaurant-card__subtitle">Ménilmontant</p>
                                 </div>
-                                <i class="fa-regular fa-heart heart-btn"></i>
+                                <div class="heart-btn">
+                                    <i class="fa-regular fa-heart heart-empty"></i>
+                                    <i class="fa-solid fa-heart heart-fill"></i>
+                                </div>
                             </div>
                         </a></article>
                     <article class="restaurant-card"><a href="">
@@ -76,7 +79,10 @@
                                 <h3 class="restaurant-card__title">La note enchantée</h3>
                                 <p class="restaurant-card__subtitle">Charonne</p>
                             </div>
-                            <i class="fa-regular fa-heart heart-btn"></i>
+                            <div class="heart-btn">
+                                <i class="fa-regular fa-heart heart-empty"></i>
+                                <i class="fa-solid fa-heart heart-fill"></i>
+                            </div>
                         </div>
                     </a></article>
                     <article class="restaurant-card"><a href="">
@@ -86,7 +92,10 @@
                                 <h3 class="restaurant-card__title">À la française</h3>
                                 <p class="restaurant-card__subtitle">Cité rouge</p>
                             </div>
-                            <i class="fa-regular fa-heart heart-btn"></i>
+                            <div class="heart-btn">
+                                <i class="fa-regular fa-heart heart-empty"></i>
+                                <i class="fa-solid fa-heart heart-fill"></i>
+                            </div>
                         </div>
                     </a></article>
                     <article class="restaurant-card"><a href="">
@@ -96,7 +105,10 @@
                                 <h3 class="restaurant-card__title">Le délice des sens</h3>
                                 <p class="restaurant-card__subtitle">Folie-Méricourt</p>
                             </div>
-                            <i class="fa-regular fa-heart heart-btn"></i>
+                            <div class="heart-btn">
+                                <i class="fa-regular fa-heart heart-empty"></i>
+                                <i class="fa-solid fa-heart heart-fill"></i>
+                            </div>
                         </div>
                     </a></article>
                 </div>
