--- a/pages/lapalettedugout.html
+++ b/pages/lapalettedugout.html
@@ -17,24 +17,109 @@
         <main class="menu">                     
             <div class="menu__header">
                 <h1 class="menu__title">La palette du goût</h1>
-                <i class="fa-regular fa-heart heart-btn"></i>
-            </div>
-            <section class="menu__section">
+                <div class="heart-btn">
+                    <i class="fa-regular fa-heart heart-empty"></i>
+                    <i class="fa-solid fa-heart heart-fill"></i>
+                </div>            </div>
+            <section class="menu__section section-entrees">
                 <h2 class="menu__section-title"><span class="title-underline">ENTR</span>ÉES</h2>
                 <article class="item-card">
-                    <div class="item-card__content">
-                        <div class="item-card__txt">
-                            <h3 class="item-card__title">Fricassée d'escargots</h3>
-                            <p class="item-card__subtitle">Au piment d'Espelette</p>
-                        </div>
-                        <p class="item-card__price">25€</p>
+                    <div class="item-card__txt item-card__content">
+                        <h3 class="item-card__title">Fricassée d'escargots</h3>
+                        <p class="item-card__subtitle">Au piment d'Espelette</p>
                     </div>
+                    <p class="item-card__price">25€</p>
                     <div class="select-trigger">
                         <i class="fa-solid fa-circle-check check-icon"></i>
                     </div>
                 </article>
-
-            </section>
+                <article class="item-card">
+                    <div class="item-card__txt item-card__content">
+                        <h3 class="item-card__title">Foie gras de canard mi-cuit</h3>
+                        <p class="item-card__subtitle">Et ses copeaux de truffe noire</p>
+                    </div>
+                    <p class="item-card__price">35€</p>
+                    <div class="select-trigger">
+                        <i class="fa-solid fa-circle-check check-icon"></i>
+                    </div>
+                </article>
+                <article class="item-card">
+                    <div class="item-card__txt item-card__content">
+                        <h3 class="item-card__title">Œuf au plat</h3>
+                        <p class="item-card__subtitle">Assaisonné à la truffe sur lit de caviar</p>
+                    </div>
+                    <p class="item-card__price">20€</p>
+                    <div class="select-trigger">
+                        <i class="fa-solid fa-circle-check check-icon"></i>
+                    </div>
+                </article>
+            </section>                    
+            <section class="menu__section section-plats">
+                <h2 class="menu__section-title"><span class="title-underline">PLAT</span>S</h2>
+                <article class="item-card">
+                    <div class="item-card__txt item-card__content">
+                        <h3 class="item-card__title">Filet de bœuf aux herbes</h3>
+                        <p class="item-card__subtitle">Accompagné de sa ribambelle de légumes</p>
+                    </div>
+                    <p class="item-card__price">40€</p>
+                    <div class="select-trigger">
+                        <i class="fa-solid fa-circle-check check-icon"></i>
+                    </div>
+                </article>
+                <article class="item-card">
+                    <div class="item-card__txt item-card__content">
+                        <h3 class="item-card__title">Parmentier de queue de bœuf</h3>
+                        <p class="item-card__subtitle">À la truffe noire sur sa purée de panais</p>
+                    </div>
+                    <p class="item-card__price">35€</p>
+                    <div class="select-trigger">
+                        <i class="fa-solid fa-circle-check check-icon"></i>
+                    </div>
+                </article>
+                <article class="item-card">
+                    <div class="item-card__txt item-card__content">
+                        <h3 class="item-card__title">Filet de turbot</h3>
+                        <p class="item-card__subtitle">Aux agrumes</p>
+                    </div>
+                    <p class="item-card__price">44€</p>
+                    <div class="select-trigger">
+                        <i class="fa-solid fa-circle-check check-icon"></i>
+                    </div>
+                </article>
+            </section>                    
+            <section class="menu__section section-desserts">
+                <h2 class="menu__section-title"><span class="title-underline">DESS</span>ERTS</h2>
+                <article class="item-card">
+                    <div class="item-card__txt item-card__content">
+                        <h3 class="item-card__title">Paris-Brest</h3>
+                        <p class="item-card__subtitle">Revisité</p>
+                    </div>
+                    <p class="item-card__price">18€</p>
+                    <div class="select-trigger">
+                        <i class="fa-solid fa-circle-check check-icon"></i>
+                    </div>
+                </article>
+                <article class="item-card">
+                    <div class="item-card__txt item-card__content">
+                        <h3 class="item-card__title">Macaron au chocolat d'exception </h3>
+                        <p class="item-card__subtitle">Et glace à la vanille de Madagascar</p>
+                    </div>
+                    <p class="item-card__price">22€</p>
+                    <div class="select-trigger">
+                        <i class="fa-solid fa-circle-check check-icon"></i>
+                    </div>
+                </article>
+                <article class="item-card">
+                    <div class="item-card__txt item-card__content">
+                        <h3 class="item-card__title">Mousse au chocolat </h3>
+                        <p class="item-card__subtitle">Au piment d'Espelette et à la truffe noire</p>
+                    </div>
+                    <p class="item-card__price">23€</p>
+                    <div class="select-trigger">
+                        <i class="fa-solid fa-circle-check check-icon"></i>
+                    </div>
+                </article>
+            </section>                    
             <button class="cta-btn" type="submit">Commander</button>
 
         </main>
