loader ok, manque responsive + pages resto + mailto

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script src="https://kit.fontawesome.com/07fc3fdff4.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="loader-container">
+        <div class="loader"></div>
+    </div>
+    <div class="main-container"> 
     <div class="main-container hide-content"> 
         <header class="header">
             <img src="./assets/__images/assets_logo/ohmyfood@2x.svg" alt="logo ohmyfood" class="header__logo">
