pages resto ok, manque responsive

--- a/pages/lapalettedugout.html
+++ b/pages/lapalettedugout.html
@@ -135,7 +135,7 @@
                     <a href="/">Devenir partenaire</a>
                 </li> 
                 <li class="footer__link"><a href="/">Mentions légales</a></li>
-                <li class="footer__link"><a href="/">Contact</a></li>
+                <li class="footer__link"><a href="mailto:contact@ohmyfood.fr">Contact</a></li>
             </ul>
         </footer>
     </div>
