--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                 </div>
                             </div>
                         </a></article>
-                    <article class="restaurant-card"><a href="">
+                    <article class="restaurant-card"><a href="./pages/lanoteenchantee.html">
                         <img src="./assets/__images/assets_restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image du restaurant la palette du goût" class="restaurant-card__img">
                         <p class="restaurant-card__badge">Nouveau</p>
                         <div class="restaurant-card__content">
@@ -89,7 +89,7 @@
                             </div>
                         </div>
                     </a></article>
-                    <article class="restaurant-card"><a href="">
+                    <article class="restaurant-card"><a href="./pages/alafrancaise.html">
                         <img src="./assets/__images/assets_restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image du restaurant la palette du goût" class="restaurant-card__img">
                         <div class="restaurant-card__content">
                             <div class="restaurant-card__txt">
@@ -102,7 +102,7 @@
                             </div>
                         </div>
                     </a></article>
-                    <article class="restaurant-card"><a href="">
+                    <article class="restaurant-card"><a href="./pages/ledelicedessens.html">
                         <img src="./assets/__images/assets_restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image du restaurant la palette du goût" class="restaurant-card__img">
                         <div class="restaurant-card__content">
                             <div class="restaurant-card__txt">
@@ -130,7 +130,7 @@
                     <a href="/">Devenir partenaire</a>
                 </li> 
                 <li class="footer__link"><a href="/">Mentions légales</a></li>
-                <li class="footer__link"><a href="/">Contact</a></li>
+                <li class="footer__link"><a href="mailto:contact@ohmyfood.fr">Contact</a></li>
             </ul>
         </footer>
     </div>
