--- a/pages/lapalettedugout.html
+++ b/pages/lapalettedugout.html
@@ -13,7 +13,7 @@
             <a href="../index.html"><i class="fa-solid fa-arrow-left header-icon"></i></a>
             <img src="../assets/__images/assets_logo/ohmyfood@2x.svg" alt="logo ohmyfood" class="header__logo">
         </header>
-        <img src="../assets/__images/assets_restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="menu-banner"> 
+        <img src="../assets/__images/assets_restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="menu-banner" alt="image du restaurant 'la palette du goût'"> 
         <main class="menu">                     
             <div class="menu__header">
                 <h1 class="menu__title">La palette du goût</h1>
