--- a/pages/alafrancaise.html
+++ b/pages/alafrancaise.html
@@ -13,7 +13,7 @@
             <a href="../index.html"><i class="fa-solid fa-arrow-left header-icon"></i></a>
             <img src="../assets/__images/assets_logo/ohmyfood@2x.svg" alt="logo ohmyfood" class="header__logo">
         </header>
-        <img src="../assets/__images/assets_restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="menu-banner"> 
+        <img src="../assets/__images/assets_restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="menu-banner" alt="image du restaurant 'à la française'"> 
         <main class="menu">                     
             <div class="menu__header">
                 <h1 class="menu__title">À la française</h1>
