--- a/pages/lanoteenchantee.html
+++ b/pages/lanoteenchantee.html
@@ -13,7 +13,7 @@
             <a href="../index.html"><i class="fa-solid fa-arrow-left header-icon"></i></a>
             <img src="../assets/__images/assets_logo/ohmyfood@2x.svg" alt="logo ohmyfood" class="header__logo">
         </header>
-        <img src="../assets/__images/assets_restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="menu-banner"> 
+        <img src="../assets/__images/assets_restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="menu-banner" alt="image du restaurant 'la note enchantée'"> 
         <main class="menu">                     
             <div class="menu__header">
                 <h1 class="menu__title">La note enchantée</h1>
