--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <div class="main-container hide-content"> 
         <header class="header">
-            <img src="./assets/__images/assets_logo/ohmyfood@2x.svg" alt="logo ohmyfood" class="header__logo">
+            <img src="assets/__images/assets_logo/ohmyfood@2x.svg" alt="logo ohmyfood" class="header__logo">
             <div class="header__localisation">
                 <i class="fa-solid fa-location-dot"></i>
                 <p>Paris, Belleville</p>
@@ -61,7 +61,7 @@
                 <h2 class="section-title">Restaurants</h2>
                 <div class="restaurants__cards card-wrapper">
                         <article class="restaurant-card"><a href="./pages/lapalettedugout.html">
-                            <img src="./assets/__images/assets_restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image du restaurant la palette du goût" class="restaurant-card__img">
+                            <img src="assets/__images/assets_restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image du restaurant la palette du goût" class="restaurant-card__img">
                             <p class="restaurant-card__badge">Nouveau</p>
                             <div class="restaurant-card__content">
                                 <div class="restaurant-card__txt">
@@ -75,7 +75,7 @@
                             </div>
                         </a></article>
                     <article class="restaurant-card"><a href="./pages/lanoteenchantee.html">
-                        <img src="./assets/__images/assets_restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image du restaurant la palette du goût" class="restaurant-card__img">
+                        <img src="assets/__images/assets_restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image du restaurant la palette du goût" class="restaurant-card__img">
                         <p class="restaurant-card__badge">Nouveau</p>
                         <div class="restaurant-card__content">
                             <div class="restaurant-card__txt">
@@ -89,7 +89,7 @@
                         </div>
                     </a></article>
                     <article class="restaurant-card"><a href="./pages/alafrancaise.html">
-                        <img src="./assets/__images/assets_restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image du restaurant la palette du goût" class="restaurant-card__img">
+                        <img src="assets/__images/assets_restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image du restaurant la palette du goût" class="restaurant-card__img">
                         <div class="restaurant-card__content">
                             <div class="restaurant-card__txt">
                                 <h3 class="restaurant-card__title">À la française</h3>
@@ -102,7 +102,7 @@
                         </div>
                     </a></article>
                     <article class="restaurant-card"><a href="./pages/ledelicedessens.html">
-                        <img src="./assets/__images/assets_restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image du restaurant la palette du goût" class="restaurant-card__img">
+                        <img src="assets/__images/assets_restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image du restaurant la palette du goût" class="restaurant-card__img">
                         <div class="restaurant-card__content">
                             <div class="restaurant-card__txt">
                                 <h3 class="restaurant-card__title">Le délice des sens</h3>
