--- a/pages/alafrancaise.html
+++ b/pages/alafrancaise.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>À la française</title>
-    <link rel="stylesheet" href="../assets/styles.css">
+    <link rel="stylesheet" href="./assets/styles.css">
     <script src="https://kit.fontawesome.com/07fc3fdff4.js" crossorigin="anonymous"></script>
 </head>
 <body>
