--- a/pages/alafrancaise.html
+++ b/pages/alafrancaise.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>À la française</title>
-    <link rel="stylesheet" href="./assets/styles.css">
+    <link rel="stylesheet" href="../assets/styles.css">
     <script src="https://kit.fontawesome.com/07fc3fdff4.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="main-container">
         <header class="header">
-            <a href="./index.html"><i class="fa-solid fa-arrow-left header-icon"></i></a>
-            <img src="./assets/__images/assets_logo/ohmyfood@2x.svg" alt="logo ohmyfood" class="header__logo">
+            <a href="../index.html"><i class="fa-solid fa-arrow-left header-icon"></i></a>
+            <img src="../assets/__images/assets_logo/ohmyfood@2x.svg" alt="logo ohmyfood" class="header__logo">
         </header>
-        <img src="./assets/__images/assets_restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="menu-banner" alt="image du restaurant 'à la française'"> 
+        <img src="../assets/__images/assets_restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="menu-banner" alt="image du restaurant 'à la française'"> 
         <main class="menu">                     
             <div class="menu__header">
                 <h1 class="menu__title">À la française</h1>
